--- a/package.json
+++ b/package.json
@@ -8,12 +8,18 @@
         "npm": "6.14.1"
     },
     "scripts": {
-        "start": "node index.js"
+        "start": "node index.js",
+        "dev": "nodemon index.js"
     },
     "keywords": [],
     "author": "",
     "license": "ISC",
     "dependencies": {
-        "express": "^4.17.1"
+        "cookie-session": "^1.4.0",
+        "express": "^4.17.1",
+        "mongoose": "^5.9.4",
+        "nodemon": "^2.0.2",
+        "passport": "^0.4.1",
+        "passport-google-oauth20": "^2.0.0"
     }
 }
