--- a/package.json
+++ b/package.json
@@ -26,6 +26,9 @@
         "nodemon": "^2.0.2",
         "passport": "^0.4.1",
         "passport-google-oauth20": "^2.0.0",
+        "path-parser": "^6.1.0",
+        "redux-form": "^8.3.1",
+        "sendgrid": "^5.2.3",
         "stripe": "^8.32.0"
     }
 }
